# mini_rlm

./: .gitignore  AGENTS.md  Makefile  PLANS.md  README.ja.md  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml
dev_scripts/: check_import_rules.py
docs/adr/: 0001-recursive-rlm-query-constraints.md
manual_tests/: __init__.py  describe_image.py  repl_describe_image.py  repl_pdf.py
mini_rlm/: __init__.py  debug_logger.py
mini_rlm/chat_session/: __init__.py  convert.py  data_model.py  executor.py  reducer.py
mini_rlm/cli/: __init__.py  chat.py  convert.py  data_model.py  main.py  run.py
mini_rlm/code_block/: __init__.py  parser.py
mini_rlm/custom_functions/: __init__.py  convert.py  data_model.py  function_collection_factory.py  functions.py
mini_rlm/image/: __init__.py  convert.py  data_model.py
mini_rlm/llm/: __init__.py  api_request.py  context_factory.py  convert.py  data_model.py  executor.py  message_factory.py  query_functions.py  reducer.py  token_usage.py
mini_rlm/pdf/: __init__.py  convert.py  pdf_util.py
mini_rlm/prompts/: chat_decision_prompt.txt  compaction_prompt.txt  rlm_system_prompt.ja.txt  rlm_system_prompt.txt
mini_rlm/recursive_query/: __init__.py  convert.py  data_model.py  executor.py
mini_rlm/repl/: __init__.py  data_model.py  executor.py  reducer.py  repl.py
mini_rlm/repl_session/: __init__.py  compacting.py  data_model.py  executor.py  executor_command.py  reducer.py  run.py
mini_rlm/repl_setup/: __init__.py  data_model.py  setup.py
scripts/: pdf_chapter_split.py
tests/: test_repl.py
(+23 files in other folders)
