[project]
name = "mini-rlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pypdfium2>=5.5.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.scripts]
mini-rlm = "mini_rlm.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
